add paragraph to code

--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
     <h1>
         Lorem ipsum dolor sit amet consectetur, adipisicing elit.  
     </h1>
+    <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magni a dolorem asperiores pariatur accusamus, accusantium corrupti it dignissimos esse iure repudiandae possimus sit cum laudantium culpa eum autem ducimus ipsum inventore.
+    </p>
 </body>
 </html>
