--- a/index.html
+++ b/index.html
@@ -12,5 +12,10 @@
     <p>
         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magni a dolorem asperiores pariatur accusamus, accusantium corrupti it dignissimos esse iure repudiandae possimus sit cum laudantium culpa eum autem ducimus ipsum inventore.
     </p>
+    <ul>
+        <li>home</li>
+        <li>about</li>
+        <li>contact us</li>
+    </ul>
 </body>
 </html>
